--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-asgiref==3.8.0
-Django==4.2.11
-sqlparse==0.4.4
-typing_extensions==4.10.0
+asgiref==3.8.1
+Django==4.2.14
+django-js-asset==2.2.0
+sqlparse==0.5.1
+tzdata==2024.1
